{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 2552,
  "lineage": "1831fd9d-fcc2-92cd-9299-d9c13e360c68",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "diplom-default-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710137062404:route-table/rtb-04d407788d78eb01e",
            "default_route_table_id": "rtb-04d407788d78eb01e",
            "id": "rtb-04d407788d78eb01e",
            "owner_id": "710137062404",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bef54e1fe16a0eff",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "diplom-default-route-table"
            },
            "tags_all": {
              "Name": "diplom-default-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01474857307648f80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.diplom-igw",
            "aws_vpc.diplom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "diplom-elastic-ip-rproxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1ce879876fd6528",
            "associate_with_private_ip": "192.168.0.4",
            "association_id": "eipassoc-0af7d57c83ef64f45",
            "domain": "vpc",
            "id": "eipalloc-0d1ce879876fd6528",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a2e8d1251cd0c90c",
            "private_dns": "ip-192-168-0-4.ec2.internal",
            "private_ip": "192.168.0.4",
            "public_dns": "ec2-34-192-11-132.compute-1.amazonaws.com",
            "public_ip": "34.192.11.132",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.diplom-igw",
            "aws_network_interface.diplom-public-network_interface-rproxy",
            "aws_security_group.allow_all_output",
            "aws_security_group.allow_internal_traffic",
            "aws_security_group.allow_ping",
            "aws_security_group.allow_ssh",
            "aws_security_group.allow_web",
            "aws_subnet.diplom-public-subnet",
            "aws_vpc.diplom-vpc",
            "null_resource.wait"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "diplom-elastic-ip_for_nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0c74a93943284b4",
            "domain": "vpc",
            "id": "eipalloc-0b0c74a93943284b4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-227-31-48.compute-1.amazonaws.com",
            "public_ip": "3.227.31.48",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "diplom-elastic-ip_for_nat-gw"
            },
            "tags_all": {
              "Name": "diplom-elastic-ip_for_nat-gw"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "diplom-vm-db_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f136f37138f59e54",
            "arn": "arn:aws:ec2:us-east-1:710137062404:instance/i-076e88e11b4be5442",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-076e88e11b4be5442",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "alexander-key-to-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0b7f3ba61b540fb0c"
              }
            ],
            "primary_network_interface_id": "eni-0b7f3ba61b540fb0c",
            "private_dns": "ip-192-168-1-4.ec2.internal",
            "private_ip": "192.168.1.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0507352a1b7d82771",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2108ded0a00bb4b",
            "tags": {
              "Name": "diplom-vm-db_node_1"
            },
            "tags_all": {
              "Name": "diplom-vm-db_node_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-099938bb7deff5c7d",
              "sg-0c63a04b66f06293c",
              "sg-0cca2f880f068489d",
              "sg-0df0e69db59bce2a8",
              "sg-0f2585c148b166433"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_network_interface.diplom-private-network_interface-db_node",
            "aws_security_group.allow_all_output",
            "aws_security_group.allow_internal_traffic",
            "aws_security_group.allow_ping",
            "aws_security_group.allow_ssh",
            "aws_security_group.allow_web",
            "aws_subnet.diplom-private-subnet-1",
            "aws_vpc.diplom-vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.pk"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f136f37138f59e54",
            "arn": "arn:aws:ec2:us-east-1:710137062404:instance/i-05bade1fff89c360f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05bade1fff89c360f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "alexander-key-to-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-00a6ba7072306a2d0"
              }
            ],
            "primary_network_interface_id": "eni-00a6ba7072306a2d0",
            "private_dns": "ip-192-168-1-5.ec2.internal",
            "private_ip": "192.168.1.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d9ab3c359612f3b6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2108ded0a00bb4b",
            "tags": {
              "Name": "diplom-vm-db_node_2"
            },
            "tags_all": {
              "Name": "diplom-vm-db_node_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-099938bb7deff5c7d",
              "sg-0c63a04b66f06293c",
              "sg-0cca2f880f068489d",
              "sg-0df0e69db59bce2a8",
              "sg-0f2585c148b166433"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_network_interface.diplom-private-network_interface-db_node",
            "aws_security_group.allow_all_output",
            "aws_security_group.allow_internal_traffic",
            "aws_security_group.allow_ping",
            "aws_security_group.allow_ssh",
            "aws_security_group.allow_web",
            "aws_subnet.diplom-private-subnet-1",
            "aws_vpc.diplom-vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "diplom-vm-gitlab_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f136f37138f59e54",
            "arn": "arn:aws:ec2:us-east-1:710137062404:instance/i-065ca1945d8544b92",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-065ca1945d8544b92",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "alexander-key-to-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0046274f1f608d6d4"
              }
            ],
            "primary_network_interface_id": "eni-0046274f1f608d6d4",
            "private_dns": "ip-192-168-1-7.ec2.internal",
            "private_ip": "192.168.1.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09cb788c776f1c08d",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2108ded0a00bb4b",
            "tags": {
              "Name": "diplom-vm-gitlab_node"
            },
            "tags_all": {
              "Name": "diplom-vm-gitlab_node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-099938bb7deff5c7d",
              "sg-0c63a04b66f06293c",
              "sg-0cca2f880f068489d",
              "sg-0df0e69db59bce2a8",
              "sg-0f2585c148b166433"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_network_interface.diplom-private-network_interface-gitlab_node",
            "aws_security_group.allow_all_output",
            "aws_security_group.allow_internal_traffic",
            "aws_security_group.allow_ping",
            "aws_security_group.allow_ssh",
            "aws_security_group.allow_web",
            "aws_subnet.diplom-private-subnet-1",
            "aws_vpc.diplom-vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "diplom-vm-gitlabrunner_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f136f37138f59e54",
            "arn": "arn:aws:ec2:us-east-1:710137062404:instance/i-0180a7c1e09d8154b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0180a7c1e09d8154b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "alexander-key-to-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0dd71e337b4e90020"
              }
            ],
            "primary_network_interface_id": "eni-0dd71e337b4e90020",
            "private_dns": "ip-192-168-1-8.ec2.internal",
            "private_ip": "192.168.1.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08d5c5ba231d90fa0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2108ded0a00bb4b",
            "tags": {
              "Name": "diplom-vm-gitlabrunner_node"
            },
            "tags_all": {
              "Name": "diplom-vm-gitlabrunner_node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-099938bb7deff5c7d",
              "sg-0c63a04b66f06293c",
              "sg-0cca2f880f068489d",
              "sg-0df0e69db59bce2a8",
              "sg-0f2585c148b166433"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_network_interface.diplom-private-network_interface-gitlabrunner_node",
            "aws_security_group.allow_all_output",
            "aws_security_group.allow_internal_traffic",
            "aws_security_group.allow_ping",
            "aws_security_group.allow_ssh",
            "aws_security_group.allow_web",
            "aws_subnet.diplom-private-subnet-1",
            "aws_vpc.diplom-vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "diplom-vm-rproxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f136f37138f59e54",
            "arn": "arn:aws:ec2:us-east-1:710137062404:instance/i-0d152a465f5c60879",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d152a465f5c60879",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "alexander-key-to-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0a2e8d1251cd0c90c"
              }
            ],
            "primary_network_interface_id": "eni-0a2e8d1251cd0c90c",
            "private_dns": "ip-192-168-0-4.ec2.internal",
            "private_ip": "192.168.0.4",
            "public_ip": "34.192.11.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a6073ae12beba84e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e559e85c8d44342",
            "tags": {
              "Name": "diplom-vm-rproxy"
            },
            "tags_all": {
              "Name": "diplom-vm-rproxy"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-099938bb7deff5c7d",
              "sg-0c63a04b66f06293c",
              "sg-0cca2f880f068489d",
              "sg-0df0e69db59bce2a8",
              "sg-0f2585c148b166433"
            ]
          },
          "dependencies": [
            "aws_eip.diplom-elastic-ip-rproxy",
            "aws_internet_gateway.diplom-igw",
            "aws_key_pair.kp",
            "aws_network_interface.diplom-public-network_interface-rproxy",
            "aws_security_group.allow_all_output",
            "aws_security_group.allow_internal_traffic",
            "aws_security_group.allow_ping",
            "aws_security_group.allow_ssh",
            "aws_security_group.allow_web",
            "aws_subnet.diplom-public-subnet",
            "aws_vpc.diplom-vpc",
            "data.aws_ami.ubuntu",
            "null_resource.wait",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "diplom-vm-web_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f136f37138f59e54",
            "arn": "arn:aws:ec2:us-east-1:710137062404:instance/i-01eb28ea7738ec08b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01eb28ea7738ec08b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "alexander-key-to-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0069e504401c6783e"
              }
            ],
            "primary_network_interface_id": "eni-0069e504401c6783e",
            "private_dns": "ip-192-168-1-6.ec2.internal",
            "private_ip": "192.168.1.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f5a27e468ee4af89",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2108ded0a00bb4b",
            "tags": {
              "Name": "diplom-vm-web_node"
            },
            "tags_all": {
              "Name": "diplom-vm-web_node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-099938bb7deff5c7d",
              "sg-0c63a04b66f06293c",
              "sg-0cca2f880f068489d",
              "sg-0df0e69db59bce2a8",
              "sg-0f2585c148b166433"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_network_interface.diplom-private-network_interface-web_node",
            "aws_security_group.allow_all_output",
            "aws_security_group.allow_internal_traffic",
            "aws_security_group.allow_ping",
            "aws_security_group.allow_ssh",
            "aws_security_group.allow_web",
            "aws_subnet.diplom-private-subnet-1",
            "aws_vpc.diplom-vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "diplom-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710137062404:internet-gateway/igw-0bef54e1fe16a0eff",
            "id": "igw-0bef54e1fe16a0eff",
            "owner_id": "710137062404",
            "tags": {
              "Name": "diplom-internet-gateway"
            },
            "tags_all": {
              "Name": "diplom-internet-gateway"
            },
            "vpc_id": "vpc-01474857307648f80"
          },
          "dependencies": [
            "aws_vpc.diplom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "diplom-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0c74a93943284b4",
            "connectivity_type": "public",
            "id": "nat-0969bb8c5d8f58cc9",
            "network_interface_id": "eni-0f4dac360856b5882",
            "private_ip": "192.168.0.166",
            "public_ip": "3.227.31.48",
            "subnet_id": "subnet-08e559e85c8d44342",
            "tags": {
              "Name": "diplom-nat-gw"
            },
            "tags_all": {
              "Name": "diplom-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.diplom-elastic-ip_for_nat-gw",
            "aws_internet_gateway.diplom-igw",
            "aws_subnet.diplom-public-subnet",
            "aws_vpc.diplom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "diplom-private-network_interface-db_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710137062404:network-interface/eni-0b7f3ba61b540fb0c",
            "id": "eni-0b7f3ba61b540fb0c",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:f9:57:fa:d1:5f",
            "owner_id": "710137062404",
            "private_ip": "192.168.1.4",
            "private_ip_list": [
              "192.168.1.4"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.1.4"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-099938bb7deff5c7d",
              "sg-0c63a04b66f06293c",
              "sg-0cca2f880f068489d",
              "sg-0df0e69db59bce2a8",
              "sg-0f2585c148b166433"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2108ded0a00bb4b",
            "tags": {
              "Name": "diplom-private-network_interface-db_0_node"
            },
            "tags_all": {
              "Name": "diplom-private-network_interface-db_0_node"
            }
          },
          "dependencies": [
            "aws_security_group.allow_all_output",
            "aws_security_group.allow_internal_traffic",
            "aws_security_group.allow_ping",
            "aws_security_group.allow_ssh",
            "aws_security_group.allow_web",
            "aws_subnet.diplom-private-subnet-1",
            "aws_vpc.diplom-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710137062404:network-interface/eni-00a6ba7072306a2d0",
            "id": "eni-00a6ba7072306a2d0",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:4c:ba:15:62:7f",
            "owner_id": "710137062404",
            "private_ip": "192.168.1.5",
            "private_ip_list": [
              "192.168.1.5"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.1.5"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-099938bb7deff5c7d",
              "sg-0c63a04b66f06293c",
              "sg-0cca2f880f068489d",
              "sg-0df0e69db59bce2a8",
              "sg-0f2585c148b166433"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2108ded0a00bb4b",
            "tags": {
              "Name": "diplom-private-network_interface-db_1_node"
            },
            "tags_all": {
              "Name": "diplom-private-network_interface-db_1_node"
            }
          },
          "dependencies": [
            "aws_security_group.allow_all_output",
            "aws_security_group.allow_internal_traffic",
            "aws_security_group.allow_ping",
            "aws_security_group.allow_ssh",
            "aws_security_group.allow_web",
            "aws_subnet.diplom-private-subnet-1",
            "aws_vpc.diplom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "diplom-private-network_interface-gitlab_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710137062404:network-interface/eni-0046274f1f608d6d4",
            "id": "eni-0046274f1f608d6d4",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:c6:3b:45:7c:a7",
            "owner_id": "710137062404",
            "private_ip": "192.168.1.7",
            "private_ip_list": [
              "192.168.1.7"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.1.7"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-099938bb7deff5c7d",
              "sg-0c63a04b66f06293c",
              "sg-0cca2f880f068489d",
              "sg-0df0e69db59bce2a8",
              "sg-0f2585c148b166433"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2108ded0a00bb4b",
            "tags": {
              "Name": "diplom-private-network_interface-gitlab_node"
            },
            "tags_all": {
              "Name": "diplom-private-network_interface-gitlab_node"
            }
          },
          "dependencies": [
            "aws_security_group.allow_all_output",
            "aws_security_group.allow_internal_traffic",
            "aws_security_group.allow_ping",
            "aws_security_group.allow_ssh",
            "aws_security_group.allow_web",
            "aws_subnet.diplom-private-subnet-1",
            "aws_vpc.diplom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "diplom-private-network_interface-gitlabrunner_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710137062404:network-interface/eni-0dd71e337b4e90020",
            "id": "eni-0dd71e337b4e90020",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:29:c6:44:9a:8f",
            "owner_id": "710137062404",
            "private_ip": "192.168.1.8",
            "private_ip_list": [
              "192.168.1.8"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.1.8"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-099938bb7deff5c7d",
              "sg-0c63a04b66f06293c",
              "sg-0cca2f880f068489d",
              "sg-0df0e69db59bce2a8",
              "sg-0f2585c148b166433"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2108ded0a00bb4b",
            "tags": {
              "Name": "diplom-private-network_interface-gitlabrunner_node"
            },
            "tags_all": {
              "Name": "diplom-private-network_interface-gitlabrunner_node"
            }
          },
          "dependencies": [
            "aws_security_group.allow_all_output",
            "aws_security_group.allow_internal_traffic",
            "aws_security_group.allow_ping",
            "aws_security_group.allow_ssh",
            "aws_security_group.allow_web",
            "aws_subnet.diplom-private-subnet-1",
            "aws_vpc.diplom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "diplom-private-network_interface-grafana_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710137062404:network-interface/eni-0da5f15fbd428d36a",
            "id": "eni-0da5f15fbd428d36a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:5b:df:33:c0:93",
            "owner_id": "710137062404",
            "private_ip": "192.168.1.9",
            "private_ip_list": [
              "192.168.1.9"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.1.9"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-099938bb7deff5c7d",
              "sg-0c63a04b66f06293c",
              "sg-0cca2f880f068489d",
              "sg-0df0e69db59bce2a8",
              "sg-0f2585c148b166433"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2108ded0a00bb4b",
            "tags": {
              "Name": "diplom-private-network_interface-grafana_node"
            },
            "tags_all": {
              "Name": "diplom-private-network_interface-grafana_node"
            }
          },
          "dependencies": [
            "aws_security_group.allow_all_output",
            "aws_security_group.allow_internal_traffic",
            "aws_security_group.allow_ping",
            "aws_security_group.allow_ssh",
            "aws_security_group.allow_web",
            "aws_subnet.diplom-private-subnet-1",
            "aws_vpc.diplom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "diplom-private-network_interface-web_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710137062404:network-interface/eni-0069e504401c6783e",
            "id": "eni-0069e504401c6783e",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:93:ca:96:cc:c5",
            "owner_id": "710137062404",
            "private_ip": "192.168.1.6",
            "private_ip_list": [
              "192.168.1.6"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.1.6"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-099938bb7deff5c7d",
              "sg-0c63a04b66f06293c",
              "sg-0cca2f880f068489d",
              "sg-0df0e69db59bce2a8",
              "sg-0f2585c148b166433"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2108ded0a00bb4b",
            "tags": {
              "Name": "diplom-private-network_interface-web_node"
            },
            "tags_all": {
              "Name": "diplom-private-network_interface-web_node"
            }
          },
          "dependencies": [
            "aws_security_group.allow_all_output",
            "aws_security_group.allow_internal_traffic",
            "aws_security_group.allow_ping",
            "aws_security_group.allow_ssh",
            "aws_security_group.allow_web",
            "aws_subnet.diplom-private-subnet-1",
            "aws_vpc.diplom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "diplom-public-network_interface-rproxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710137062404:network-interface/eni-0a2e8d1251cd0c90c",
            "id": "eni-0a2e8d1251cd0c90c",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:d3:05:86:f4:13",
            "owner_id": "710137062404",
            "private_ip": "192.168.0.4",
            "private_ip_list": [
              "192.168.0.4"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.0.4"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-099938bb7deff5c7d",
              "sg-0c63a04b66f06293c",
              "sg-0cca2f880f068489d",
              "sg-0df0e69db59bce2a8",
              "sg-0f2585c148b166433"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e559e85c8d44342",
            "tags": {
              "Name": "diplom-public-network_interface-rproxy"
            },
            "tags_all": {
              "Name": "diplom-public-network_interface-rproxy"
            }
          },
          "dependencies": [
            "aws_security_group.allow_all_output",
            "aws_security_group.allow_internal_traffic",
            "aws_security_group.allow_ping",
            "aws_security_group.allow_ssh",
            "aws_security_group.allow_web",
            "aws_subnet.diplom-public-subnet",
            "aws_vpc.diplom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "diplom-route-table-private-via-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710137062404:route-table/rtb-0e033a9db40b7c59d",
            "id": "rtb-0e033a9db40b7c59d",
            "owner_id": "710137062404",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0969bb8c5d8f58cc9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "diplom-route-table-private-via-nat"
            },
            "tags_all": {
              "Name": "diplom-route-table-private-via-nat"
            },
            "timeouts": null,
            "vpc_id": "vpc-01474857307648f80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.diplom-elastic-ip_for_nat-gw",
            "aws_internet_gateway.diplom-igw",
            "aws_nat_gateway.diplom-nat-gw",
            "aws_subnet.diplom-public-subnet",
            "aws_vpc.diplom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "diplom-private1-to-NAT-route_table-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0710c4c59ddc63d00",
            "route_table_id": "rtb-0e033a9db40b7c59d",
            "subnet_id": "subnet-0f2108ded0a00bb4b"
          },
          "dependencies": [
            "aws_eip.diplom-elastic-ip_for_nat-gw",
            "aws_internet_gateway.diplom-igw",
            "aws_nat_gateway.diplom-nat-gw",
            "aws_route_table.diplom-route-table-private-via-nat",
            "aws_subnet.diplom-private-subnet-1",
            "aws_subnet.diplom-public-subnet",
            "aws_vpc.diplom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all_output",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710137062404:security-group/sg-0c63a04b66f06293c",
            "description": "Allow All Output traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c63a04b66f06293c",
            "ingress": [],
            "name": "allow_output",
            "name_prefix": "",
            "owner_id": "710137062404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "diplom_allow_all_output"
            },
            "tags_all": {
              "Name": "diplom_allow_all_output"
            },
            "timeouts": null,
            "vpc_id": "vpc-01474857307648f80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.diplom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_internal_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710137062404:security-group/sg-099938bb7deff5c7d",
            "description": "Allow internal_traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-099938bb7deff5c7d",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_internal_traffic",
            "name_prefix": "",
            "owner_id": "710137062404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "diplom_allow_internal_traffic"
            },
            "tags_all": {
              "Name": "diplom_allow_internal_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-01474857307648f80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.diplom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710137062404:security-group/sg-0df0e69db59bce2a8",
            "description": "Allow ping",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "id": "sg-0df0e69db59bce2a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "allow_ping",
            "name_prefix": "",
            "owner_id": "710137062404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "diplom_allow_ping"
            },
            "tags_all": {
              "Name": "diplom_allow_ping"
            },
            "timeouts": null,
            "vpc_id": "vpc-01474857307648f80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.diplom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710137062404:security-group/sg-0f2585c148b166433",
            "description": "Allow ssh inbound traffic",
            "egress": [],
            "id": "sg-0f2585c148b166433",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH to VMs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "710137062404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "diplom_allow_ssh"
            },
            "tags_all": {
              "Name": "diplom_allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-01474857307648f80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.diplom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710137062404:security-group/sg-0cca2f880f068489d",
            "description": "Allow web inbound traffic",
            "egress": [],
            "id": "sg-0cca2f880f068489d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http to VMs",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https to VMs",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_web",
            "name_prefix": "",
            "owner_id": "710137062404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "diplom_allow_web"
            },
            "tags_all": {
              "Name": "diplom_allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-01474857307648f80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.diplom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "diplom-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710137062404:subnet/subnet-0f2108ded0a00bb4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2108ded0a00bb4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710137062404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "diplom-private-Subnet-1"
            },
            "tags_all": {
              "Name": "diplom-private-Subnet-1"
            },
            "vpc_id": "vpc-01474857307648f80"
          },
          "dependencies": [
            "aws_vpc.diplom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "diplom-private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710137062404:subnet/subnet-09f88bc13d723e7f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f88bc13d723e7f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710137062404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "diplom-private-Subnet-2"
            },
            "tags_all": {
              "Name": "diplom-private-Subnet-2"
            },
            "vpc_id": "vpc-01474857307648f80"
          },
          "dependencies": [
            "aws_vpc.diplom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "diplom-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710137062404:subnet/subnet-08e559e85c8d44342",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e559e85c8d44342",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "710137062404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "diplom-public-Subnet"
            },
            "tags_all": {
              "Name": "diplom-public-Subnet"
            },
            "vpc_id": "vpc-01474857307648f80"
          },
          "dependencies": [
            "aws_vpc.diplom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "diplom-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710137062404:vpc/vpc-01474857307648f80",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-02f124d36c83a8970",
            "default_route_table_id": "rtb-04d407788d78eb01e",
            "default_security_group_id": "sg-0c5d43a205145f259",
            "dhcp_options_id": "dopt-0fb9af6d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01474857307648f80",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04d407788d78eb01e",
            "owner_id": "710137062404",
            "tags": {
              "Name": "diplom-vpc"
            },
            "tags_all": {
              "Name": "diplom-vpc"
            }
          }
        }
      ]
    }
  ]
}